lab/apps/uptime-kuma/uptime-kuma-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-service
  namespace: uptimekuma
spec:
  selector:
    app: uptimekuma
  ports:
  - name: uptime-kuma
    port: 3001
